@startuml

class Insurance {
    bytes32 flightKey
    address passenger
    uint256 payment
}

class DAppAirline {
    + airlineStatus
    --
    + onLoad()
    ==
    + registerAirline()
    + fund()
    ==
    + registerFlight()
    + updateFlight()
    + fetchFlighStatus()
}

class DAppPassenger {
    + onLoad()
    + purchaseFlightInsurance()
}

class Oracle {
    + bool isRegistered
    + uint8[3] indexes
    ==
    + eventRegiserFlight
    + queryFlight event
    + regusterFlight event
    + eventFlightStatus event
    + queryPassengersForTheFlight event
    + eventPaidInsurence(flight) event
    ==
    + getFlghtsByAirline(string AilineName) JSON flights struct
    + getFlghtsByPassenger(string passengerName) JSON flights struct
}

class FlightSuretyDB <<Database>> {
    + Flights
    + Insurance {Passengername, flights, paymentAmount}
    --
    + get flighs for the passenger
    + add flight with unknown status
    + update Flight status with status code
    + queryPassengersForTheFlight
    + mark paid insureance
}

class ResponseInfo {
    + address requester;
    + bool isOpen;
    + mapping(uint8 => address[]) responses;
}

enum FlightStatusCode {
    + uint8 private constant STATUS_CODE_UNKNOWN = 0;
    + uint8 private constant STATUS_CODE_ON_TIME = 10;
    + uint8 private constant STATUS_CODE_LATE_AIRLINE = 20;
    + uint8 private constant STATUS_CODE_LATE_WEATHER = 30;
    + uint8 private constant STATUS_CODE_LATE_TECHNICAL = 40;
    + uint8 private constant STATUS_CODE_LATE_OTHER = 50;
}

class FlightSuretyApp {
    - bool private operational = true
    - enum AirlineStatusCode {REGISTERED, APPROVED, APPROVED_FUNDED, REJECTED}
    - enum FlightStatusCode
    --
    + function isOperational()
    + function setOperational(bool mode ) external requireContractOwne
    - modifier requireIsOperational()
    - modifier requireContractOwner()
    - modifier onlyNewAccount()
    - modifier onlyAirline()
    - modifier onlyPassenger()
    ==
    - FlightSuretyData private flightSuretyData
    --
    + constructor (address _dataContractAddress)
    + function getAccountType(msg.sender) return uint32
    ==
    + function registerAirline(string memory airlineName) public onlyNewAccount
    + function approveAirline(string memory airlineName) public onlyAirline
    + function fund() public isAirline payable
    + function getAirlineStatus() public isAirline return (REGISTERED, APPROVED, APPROVED_FUNDED, REJECTED)
    + function registerFlight(uint32 flightNumber) public isAirline
    + function getFlightsByAirline() public isAirline
    + function fetchFlightStatus (address airline, string flight, uint256 timestamp ) public isAirline
    + function processFlightStatus(uint32 memory flight, uint256 timestamp, uint8 statusCode ) public isAIrline
    --
    + function registerPassenger(string memory name) public isNewAccount
    + function getFlightsByPassenger() public isPassenger
    + function buy(uint32 flight)
    --
    + pay(payment amount, passenger)
    + function creditInsurees()
    --
    + withdraw(uint256 amount) public payable onlyContractOwner
    ==
    - uint8 private nonce = 0;
    + uint256 public constant REGISTRATION_FEE = 1 ether;
    - uint256 private constant MIN_RESPONSES = 3;
    - mapping(address => Oracle) private oracles;
    - mapping(bytes32 => ResponseInfo) private oracleResponses;
    ==
    + event eventRegisteredAirline(address airline)
    + event eventApprovedAirline(address airline)
    + event eventFundedAirline(address airline)
    --
    + event eventRegisterFlight(address airline, string flight, uint256 timestamp, uint8 status)
    + event eventUpdateFlightStatus(address airline, uint32 flightCode, uint256 timestamp, uint8 status)
    ==
    +function callbackGetFlightsByPassenger(address passenger)
    +function callbackGetFlightsByAirline(address airline)
    --
    + function listenFlightStatuUpdatesUpdate(string calldata airlineName, string calldata flightName, uint256 timestamp, string calldata passengerName, uint8 statusCode)
    ==
    - mapping(address => Oracle) private oracles;
    - mapping(bytes32 => ResponseInfo) private oracleResponses // hash(flight, index, timestamp)
    --
    + function registerOracle() external payable
    - function getOracleIndexes () private isAirline return(uint)
    - function getFlightKey (address airline, string flight, uint256 timestamp )
    - function generateIndexes (ddress account )
    - function getRandomIndex (address account )
    ==
    + function()
}

class FlightSuretyData {
    - address private contractOwner
        note right Account used to deploy contract
    - bool private operational = true
        note right Blocks all state changes throughout the contract if false
    ==
    - modifier requireIsOperational()
    - modifier requireContractOwner()
    ==
    - function isOperational()
    + function setOperatingStatus(bool mode ) external requireContractOwner
    --
    + {method} constructor ()
}

class AirlineData {
    - mapping(address => Airline) private airlines;
    ==
    + event AirlineAdded(address indexed account)
    - modifier onlyAirline()
    - modifier onlyApproved()
    - modifier onlyFunded()
    ==
    + constructor() msg.sender
    + function isAirline(address account) public view returns (bool)
    + function addAirline(address account) public onlyAirline
    + function renounceAirline() public
    - function _addAirline(address account) internal
    - function _removeAirline(address account) internal
    ==
    + function isApproved() public view reutnrs (bool)
    + function isFunded() public view returns (bool)
}

class PassengerData {
    - mapping(address => Passenger) private passengers;
    ==
    + event PassengerAdded(address indexed account);
    + event PassengerRemoved(address indexed account);
    - modifier onlyPassenger() {
    ==
    + constructor() msg.sender
    + function isPassenger(address account) public view returns (bool)
    + function addPassenger(address account) public onlyAirline
    + function renouncePassenger() public
    - function _addPassenger(address account) internal
    - function _removePassenger(address account) internal
}

DAppAirline "1" -> "1" FlightSuretyApp : Utilize >
DAppPassenger "1" -> "1" FlightSuretyApp : Utilize >
FlightSuretyApp "1" ->"1" FlightSuretyData : Persistence >
FlightSuretyApp "1" --  "1" Oracle : External Service >
AirlineRole <|-- FlightSuretyData
PassengerRole <|-- FlightSuretyData
Oracle -- FlightSuretyDB
FlightSuretyDB *-- Insurance
FlightSuretyDB *-- Flight : Manages >
(FlightSuretyApp, Oracle) .. ResponseInfo
Flight .. FlightStatusCode

@enduml